[package]
name = "wisteria3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.12"
regex = "1.10.4"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
xml-rs = "0.8.20"
zip = "2.1.3"
sha256 = "1.5.0"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = [ "derive" ]}
openssl = { version = "0.10", features = ["vendored"] }
serde-xml-rs = "0.6.0"
